--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
         </section>
             <div style="text-align: center">
-                <p>Faiz Hafeez © 2019, Developed by <a href="https:huzaifasaeed.github.com" target="_blank" style="color: aliceblue">Huzaifa Saeed</a></p>
+                <p>Faiz Hafeez © 2019, Developed by <a href="huzaifasaeed.github.com" target="_blank" style="color: aliceblue">Huzaifa Saeed</a></p>
              </div>
                 
                
