--- a/index.html
+++ b/index.html
@@ -84,12 +84,11 @@
                 </div>
         </section>
             <div style="text-align: center">
-                <p>Faiz Hafeez © 2019, Developed by <a href="huzaifasaeed.github.com" target="_blank" style="color: aliceblue">Huzaifa Saeed</a></p>
+                <p>Faiz Hafeez © 2019, Developed by <a href="https://huzaifasaeed.github.io" target="_blank" style="color: aliceblue">Huzaifa Saeed</a></p>
              </div>
                 
                
     </div>
-    <script data-cfasync="false" src="cdn-cgi/scripts/af2821b0/cloudflare-static/email-decode.min.js"></script>
     <script src=lib/jquery/dist/jquery.min.js></script>
     <script src=lib/materialize/dist/js/materialize.min.js></script>
     <script src=lib/angular/angular.min.js></script>
