--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <h2 class=darkcolor>Who am I?</h2>
                 <p class=flow-text>
                     <li>Physics Lecturer at ARPA Schools & College Metroville</li>
+                    <li>Physics Lecturer at Adamjee Coaching Center (Campus 31)</li>
                     <li>Studied Bachelor of Science in Physics at Karachi University</li>
                     <li>Physicist</li>
                     <li>Teacher</li>
@@ -71,9 +72,9 @@
                     <div class="name col s12">Strong team working, leadership and communication skills.</div>
                     <div class="name col s12 border"></div>
                     <h3 class="col s12">Computer Skills</h3>
-                    <div class="name col s4">Adobe PhotoShop</div>
+                    <div class="name col s4">Graphic Designer</div>
                     <div class="col s12 "></div>
-                    <div class="name col s4">MS-Office</div>
+                    <div class="name col s4">CIT</div>
                 </div>
             </div>
         </section>
