--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@
                     </div>
                 </div>
         </section>
+        <section id=notesrow class="row contentrow centerrow ultradarkbgcolor-transparent">
+            
+            <div class="col s12 skill scrollfade">
+                <h2 style="padding-bottom: 0;" class="col s12">My Notes</h2>
+                <div class="col s12 skills">
+                    <h3 class="name col s12"> <a href="1st_year_numericals.pdf" >1st Year Numericals</a></h3>
+                    <div class="name col s12 border"></div>
+                    <h3 class="name col s12"><a href="2nd_year_numericals.pdf" >2nd Year Numericals</a></h3>
+                </div>
+            </div>
+    </section>
             <div style="text-align: center">
                 <p>Faiz Hafeez © 2019, Developed by <a href="https://huzaifasaeed.github.io"  rel=me target=_blank style="color: aliceblue">Huzaifa Saeed</a></p>
              </div>
