--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li>Photographer</li>
                     <li>Social worker</li>
                     <li>Social Media Activist</li>
-                    <a href="CV_Faiz_Hafeez.docx" download="CV Faiz Hafeez">
+                    <a href="Curriculum Vitae.pdf" download="CV Faiz Hafeez">
                         <img style="margin-top: 20px" src="img/CV_Button.png" alt="CV Faiz Hafeez" width="40%" height="40%">
                       </a>
                       
@@ -96,7 +96,7 @@
                 <div class="col s12 skills">
                     <h3 class="name col s12"> <a href="1st_year_numericals.pdf" >1st Year Numericals</a></h3>
                     <div class="name col s12 border"></div>
-                    <h3 class="name col s12"><a href="2nd_year_numericals.pdf" >2nd Year Numericals</a></h3>
+                    <h3 class="name col s12"><a href="XII Numericals 2022.pdf" >2nd Year Numericals</a></h3>
                 </div>
             </div>
     </section>
